@@ -1,3 +1,9 @@
+2005-05-09  Pascal J.Bourguignon  <pjb@informatimago.com>
+
+	* modules/syscalls/calls.c (OPENLOG): allocate ident and keep it
+	in a static variable
+	(CLOSELOG): release it
+
 2005-05-09  Sam Steingold  <sds@gnu.org>
 
 	* modules/clx/mit-clx/dependent.lisp (host-address): use
